--- a/mqtt_client/docker-compose.yml
+++ b/mqtt_client/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     - "EMQX_NODE_NAME=emqx@node1.emqx.io"
     - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
     - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
+    - "EMQX_SSL_LISTENER__DEFAULT=on"
+    - "EMQX_SSL_LISTENER__DEFAULT__CERTFILE=/opt/emqx/etc/certs/cert.pem"
+    - "EMQX_SSL_LISTENER__DEFAULT__KEYFILE=/opt/emqx/etc/certs/key.pem"
     healthcheck:
       test: ["CMD", "/opt/emqx/bin/emqx", "ctl", "status"]
       interval: 5s
@@ -18,32 +21,30 @@ services:
         aliases:
         - node1.emqx.io
     ports:
-      - 1883:1883
+      # - 1883:1883
       - 8083:8083
       - 8084:8084
       - 8883:8883
       - 18083:18083 
-    # volumes:
-    #   - $PWD/emqx1_data:/opt/emqx/data
+    volumes:
+      - ./certs:/opt/emqx/etc/certs
 
-  emqx2:
-    image: emqx:5.8.0
-    container_name: emqx2
-    environment:
-    - "EMQX_NODE_NAME=emqx@node2.emqx.io"
-    - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
-    - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
-    healthcheck:
-      test: ["CMD", "/opt/emqx/bin/emqx", "ctl", "status"]
-      interval: 5s
-      timeout: 25s
-      retries: 5
-    networks:
-      emqx-bridge:
-        aliases:
-        - node2.emqx.io
-    # volumes:
-    #   - $PWD/emqx2_data:/opt/emqx/data
+  # emqx2:
+  #   image: emqx:5.8.0
+  #   container_name: emqx2
+  #   environment:
+  #   - "EMQX_NODE_NAME=emqx@node2.emqx.io"
+  #   - "EMQX_CLUSTER__DISCOVERY_STRATEGY=static"
+  #   - "EMQX_CLUSTER__STATIC__SEEDS=[emqx@node1.emqx.io,emqx@node2.emqx.io]"
+  #   healthcheck:
+  #     test: ["CMD", "/opt/emqx/bin/emqx", "ctl", "status"]
+  #     interval: 5s
+  #     timeout: 25s
+  #     retries: 5
+  #   networks:
+  #     emqx-bridge:
+  #       aliases:
+  #       - node2.emqx.io
 
 networks:
   emqx-bridge:
