--- a/mqtt_client/package.json
+++ b/mqtt_client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node client.js"
+    "start": "node client.js",
+    "start:dev": "node --watch client.js"
   },
   "author": "",
   "license": "ISC",
