feat: 	- modified login and signup to be able to register new components/alarms 	- adding new data to component and alarm pages

--- a/webPage/back-end/.env
+++ b/webPage/back-end/.env
@@ -8,3 +8,7 @@ DB_NAME_DEVELOPMENT=bacchus-dev
 JWTKEY=back-vitrine-secret-2023
 TOKEN_EXPIRATION=168h
 BEARER=Bearerl
+MAIL_HOST="smtp.gmail.com"
+MAIL_PORT=587
+MAIL_USERNAME="tupi9371@gmail.com"
+MAIL_PASSWORD="yyoztanpgzchfhzn"
